--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,16 @@
 
     <application
         android:allowBackup="true"
+        android:name=".SimpleApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.DetailActivity"
-            android:parentActivityName=".ui.MainActivity"></activity>
-        <activity android:name=".ui.MainActivity">
+            android:name="com.blibli.simpleapp.feature.user.view.detail.DetailActivity"
+            android:parentActivityName="com.blibli.simpleapp.feature.user.view.main.MainActivity" />
+        <activity android:name="com.blibli.simpleapp.feature.user.view.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
