--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,6 @@ dependencies {
 
     // Dagger 2
     implementation 'com.google.dagger:dagger-android:2.27'
+    kapt 'com.google.dagger:dagger-android-processor:2.27'
     kapt 'com.google.dagger:dagger-compiler:2.27'
 }
