--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,17 +5,20 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:name=".SimpleApp"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.blibli.simpleapp.feature.user.view.detail.DetailActivity"
-            android:parentActivityName="com.blibli.simpleapp.feature.user.view.main.MainActivity" />
-        <activity android:name="com.blibli.simpleapp.feature.user.view.main.MainActivity">
+            android:name=".feature.user.view.savedUser.SavedUserActivity"
+            android:parentActivityName=".feature.user.view.main.MainActivity"></activity>
+        <activity
+            android:name=".feature.user.view.detail.DetailActivity"
+            android:parentActivityName=".feature.user.view.main.MainActivity" />
+        <activity android:name=".feature.user.view.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
