--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.blibli.simpleapp">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,9 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".feature.service.BackgroundService"
+            android:enabled="true"
+            android:exported="false" />
+
         <activity
             android:name=".feature.user.view.savedUser.SavedUserActivity"
-            android:parentActivityName=".feature.user.view.main.MainActivity"></activity>
+            android:parentActivityName=".feature.user.view.main.MainActivity" />
         <activity
             android:name=".feature.user.view.detail.DetailActivity"
             android:parentActivityName=".feature.user.view.main.MainActivity" />
